--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/fuwen-msg/github.io">View on GitHub</a>
+    
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>GitHub.io</h1>
-            <h2>富文时代博客</h2>
+            <h1富文时代</h1>
+            <h2>博客</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
