--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1富文时代</h1>
+            <h1>富文时代</h1>
             <h2>博客</h2>
           </span>
           <span class="left-tail"></span>
